# lib_openblas

./: CMakeLists.txt  README.md  config.h
cmake/: PackageConfig.cmake.in  f_check.cmake  lapack.cmake  lapacke.cmake  util.cmake
lapack-netlib/LAPACKE/: CMakeLists.txt
opt/: folders.csv  postprocess.py
